# dump

./: Cargo.toml  IDEAS.md  README.md  index.md
.dump/: .dumpignore  base.mustache  binary.mustache  dump_rss.toml  index.mustache  text.mustache
.dump/ext/: md.mustache
docs/: dump.rss  index.html  index.md
docs/explore/: index.html  index.md
docs/explore/reset/: index.html
docs/explore/style/: index.html
docs/ideas/: index.html
docs/readme/: index.html
docs/src/: dump-rss.rs  dump.rs  index.html  metadata.rs  render.rs
docs/src/dump/: index.html
docs/src/dump-rss/: index.html
docs/src/main/: index.html
docs/src/metadata/: index.html
docs/src/render/: index.html
docs/src/route/: index.html
explore/: style.css
src/: dump.rs  dump_rss.rs  index.md  main.rs  metadata.rs  render.rs  route.rs
