[package]
name = "dump"
version = "0.1.0"
authors = ["Isaac Clayton <slightknack@gmail.com>"]
edition = "2018"

[dependencies]
ramhorns = "0.10"
# Until https://github.com/maciejhirsz/ramhorns/issues/47
pulldown-cmark = "0.8.0"
chrono = "0.4"
deunicode = "1.2"
rss = "1.10"
gitignored = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
